--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "next": "13.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-swipeable": "^7.0.0",
+    "sharp": "^0.31.2",
     "typescript": "4.8.4"
   },
   "devDependencies": {
