--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.0.8",
     "framer-motion": "^7.6.4",
     "gsap": "^3.11.3",
+    "motion": "^10.15.3",
     "next": "13.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
