--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
+    "firebase": "^9.15.0",
     "framer-motion": "^7.6.4",
+    "googleapis": "^109.0.1",
     "gsap": "^3.11.3",
     "motion": "^10.15.3",
     "next": "13.0.1",
+    "nodemailer": "^6.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-swipeable": "^7.0.0",
@@ -25,6 +28,7 @@
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@types/nodemailer": "^6.4.6",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.3"
