--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
+    "eslint-config-next": "^13.1.1",
     "firebase": "^9.15.0",
     "framer-motion": "^7.6.4",
     "googleapis": "^109.0.1",
     "gsap": "^3.11.3",
     "motion": "^10.15.3",
-    "next": "13.0.1",
+    "next": "^13.1.1",
     "nodemailer": "^6.8.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-swipeable": "^7.0.0",
     "sharp": "^0.31.2",
     "typescript": "4.8.4"
